# autocrud

./: .env  .gitignore  CONTRIBUTING.md  Makefile  README-zh.md  README.md  mkdocs.yml  pyproject.toml  test_api_data_filtering.py  test_basic.py  test_dynamic_query_params.py  test_dynamic_query_params_new.py  test_fastapi.py  test_full_api.py  test_persistence.py  test_storage_comparison.py  test_types.py
.github/: .gitignore
.github/workflows/: docs.yml
autocrud/: __init__.py  converter.py  core.py  fastapi_generator.py  metadata.py  multi_model.py  py.typed  query.py  route_config.py  schema.py  schema_analyzer.py  types.py  updater.py
autocrud/cli/: __main__.py  build.py  config.py
autocrud/crud/: async_job_builder.py  core.py  qb_parser.py
autocrud/message_queue/: __init__.py  basic.py  celery_queue.py  context.py  heartbeat.py  log_flush.py  rabbitmq.py  simple.py
autocrud/permission/: acl.py  action.py  basic.py  composite.py  data_based.py  meta_based.py  rbac.py  simple.py
autocrud/resource_manager/: basic.py  binary_processor.py  constraint_handler.py  core.py  data_converter.py  dump_format.py  events.py  file_manager.py  partial.py  permission.py  permission_context.py  permission_utils.py  pydantic_converter.py  s3_storage_factory.py  storage_factory.py  type_converter.py  unique_handler.py
autocrud/util/: type_utils.py
autocrud/v03/: basic.py  core.py
benchmark/: __init__.py  __main__.py  config.py  config.yaml  models.py  operations.py  reporter.py  runner.py  storage.py
dependencies/: pyproject.toml
docs/: DEPLOYMENT.md  GLOSSARY.md  MYPY_GUIDE.md  rabbitmq_retry.md
docs/en/: index.md  quickstart.md  reference.md
docs/reference/: SUMMARY.md  index.md  query.md  types.md
docs/source/: api_reference.md  architecture.md  auto_routes.md  changelog.md  conf.py  contributing.md  examples.md  functions.md  index.md  installation.md  query_builder_guide.md  quickstart.md  resource_manager.md  user_guide.md
docs/stylesheets/: extra.css
docs/zh/: index.md  reference.md
examples/: S3_BACKEND_README.md  advanced_permission_example.py  advanced_permission_setup.py  backup.py  basic_permission_setup.py  benchmark_metastore_perf.py  benchmark_partial.py  benchmark_resource_store_perf.py  blog_api_example.py  complete_permission_example.py  data_search.py  debug_permission_issue.py  default_user_function_example.py  ecommerce_api_example.py  field_as_condition_demo.py  improved_permission_test.py  meta_in_data.py  migration_http_demo.py  permission_context_example.py  permission_simple_example.py  quick_start.py  rabbitmq_retry_example.py  resource_crud.py  restore_example.py  rpg_game_api.py  rpg_game_celery_api.py  rpg_game_postgres_s3_api.py  rpg_game_pydantic_api.py  rpg_game_s3_api.py  s3_sqlite_meta_store_example.py  schema_upgrade.py  simple_quickstart.py  test_complete_permission.py  test_permission_creation.py  test_permission_setup.py  test_simplified_permission.py  user_dependency_example.py
examples/graphql/: gql.py  model.py  query.py
scripts/: bench_dump_load.py  deploy-docs.sh  migrate_docs.py  run_benchmarks.py
tests/: conftest.py  test_advanced_cached_s3.py  test_advanced_permission_system.py  test_advanced_updater.py  test_api_data_filtering.py  test_async_create_action.py  test_autocrud.py  test_autocrud_data_search.py  test_autocrud_mq_integration.py  test_backup.py  test_backup_routes.py  test_basic_crud.py  test_batch_route_templates.py  test_benchmark_backup.py  test_binary.py  test_binary_optimization.py  test_blob_routes.py  test_blob_routes_coverage.py  test_blob_store.py  test_blob_store_s3_mock.py  test_bulk_load.py  test_cache.py  test_cached_s3.py  test_constraint_handler.py  test_converter_coverage.py  test_converter_serializer.py  test_count_api.py  test_coverage_branches.py  test_create_action.py  test_create_router.py  test_data_coercion.py  test_data_search.py  test_data_search_comprehensive.py  test_data_search_regex.py  test_default_user_function.py  test_delay_retry.py  test_dump_load.py  test_event_handlers.py  test_fastapi.py  test_full_api.py  (+54 more)
tests/meta_store/: common.py  conftest.py  test_data_search.py  test_data_search_comprehensive.py  test_data_search_regex.py  test_list_resources.py  test_resource_manager.py
tests/migrations/: test_migrate_api.py  test_migrate_openapi.py  test_resource_manager_migrate.py
tests/other/: test_fastapi_defaults.py  test_metadata_autocrud.py
tests/permission/: test_advanced_permission_system.py  test_permission_context.py  test_permission_system.py
tests/routes/: test_api_data_filtering.py  test_api_meta_conditions.py  test_bare_path_routes.py  test_blob_routes.py  test_blob_routes_coverage.py  test_blob_upload.py  test_count_endpoint.py  test_exception_handlers.py  test_global_crud.py  test_partial_meta_info.py  test_qb_search_integration.py  test_route_templates.py
tests/test_graphql/: test_graphql_enum.py  test_graphql_features.py  test_graphql_template.py  test_graphql_unified.py
tests/test_message_queue/: test_celery.py  test_celery_heartbeat.py  test_delay_retry.py  test_ensure_fail_status.py  test_heartbeat.py  (+10 more)
web/: Makefile
wizard/: Makefile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+588 files in other folders)
