[project]
name = "autocrud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.1",
    "fastapi>=0.116.1",
    "msgpack>=1.1.1",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]
pytest = []
