[project]
name = "autocrud"
dynamic = ["version"]
description = "自動產生 CRUD API 的 Python 函式庫"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "HYChou0515", email = "hychou.svm@example.com"}
]
keywords = ["fastapi", "crud", "api", "automation", "rest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "more-itertools>=10.7.0",
    "msgpack>=1.1.1",
    "msgspec>=0.19.0",
    "pydantic>=1.10.26,<3",
    "pymysql[dev]>=1.1.2",
    "qqabc>=0.2.1",
    "xxhash>=3.5.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.3.0",
    "pymdown-extensions>=10.0.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-static-i18n>=1.2.0",
    "autocrud[s3]",
]
dev = [
    "coverage>=7.9.2",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "pytest-asyncio>=1.1.0",
    "autocrud[all]",
    "oracledb>=3.4.2",
]
s3 = [
    "boto3>=1.40.21",
]
cli = [
    "datamodel-code-generator[http]>=0.35.0",
    #"fstui>=0.1.1",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "textual>=6.3.0",
    "typer>=0.20.0",
]
magic = [
    "python-magic>=0.4.27",
]
mq = [
    "pika>=1.3.2",
]
graphql = [
    "strawberry-graphql>=0.288.1",
]
all = [
    "autocrud[s3,magic,mq,graphql,cli]",
]
[project.urls]
Homepage = "https://github.com/HYChou0515/autocrud"
Documentation = "https://HYChou0515.github.io/autocrud/"
Repository = "https://github.com/HYChou0515/autocrud.git"
Issues = "https://github.com/HYChou0515/autocrud/issues"

[dependency-groups]
dev = [
    "boto3-stubs[full]>=1.40.21",
    "build>=1.2.2.post1",
    "celery>=5.6.2",
    "coverage>=7.9.2",
    "faker>=37.5.3",
    "fastapi[standard]>=0.116.1",
    "furo>=2025.7.19",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipython>=9.4.0",
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.1",
    "oracledb>=3.4.2",
    "pandas>=2.3.1",
    "pika-stubs>=0.1.3",
    "polars>=1.32.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-retry>=1.7.0",
    "redis>=6.4.0",
    "ruff>=0.12.4",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-design>=0.6.1",
    "sqlalchemy>=2.0.46",
    "twine>=6.1.0",
    "uvicorn>=0.35.0",
]
pytest = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "autocrud/__init__.py"

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    "except ImportError:",
    "warnings.warn.*AutoCRUDWarning",
]
[tool.coverage.run]
omit = [
    "tests/*",
]
[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    "F841", # Local variable is assigned to but never used
]
"tests/*" = [
    "F841", # Local variable name is assigned to but never used
    # we are testing the code, so we need to use `assert` in tests
    "S101", # Use of assert detected.
    # allow import inside function
    "PLC0415", # `import` should be at the top-level of a file
    # we use pickle and dill to serialize objects in tests
    "S301", # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
    "S403", # `pickle`, `cPickle`, `dill`, and `shelve` modules are possibly insecure
    # magic value comparison is allowed in tests
    "PLR2004", # Magic value used in comparison, consider replacing `11` with a constant variable
]
